# github-ai-trend-tracker

./: .commitlintrc.json  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: commit_convention.md
.github/workflows/: ci-failure-handler.yml  ci.yml  daily-ingestion.yml  linear-sync.yml
.linear/: bug.md  chore.md  feature.md  improvement.md
.streamlit/: config.toml
dashboard/: Dockerfile  README.md  app.py  evidence.config.yaml  evidence.plugins.yaml  package-lock.json  package.json  packages.txt  requirements.txt  streamlit_app.py
dashboard/.streamlit/: config.toml
dashboard/pages/: index.md
dashboard/sources/motherduck/: connection.yaml  initialize.sql
dbt/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/models/marts/core/: dim_repositories.sql
dbt/models/marts/metrics/: _metrics.yml  fct_language_trends.sql  fct_repo_star_growth.sql  fct_repo_star_history.sql  fct_trending_repos.sql
dbt/models/staging/: _sources.yml  _stg_models.yml  stg_repositories.sql
orchestration/: flows.py
pipelines/: github_ai_repos.py
scripts/: run_local.sh  setup.sh
skills/frontend-design-enhanced/: SKILL.md
skills/github-ai-tracker/: SKILL.md
skills/github-ai-tracker/references/: useful_queries.md
skills/github-ai-tracker/scripts/: validate_pipeline.py
tests/: conftest.py  test_dashboard.py  test_integration.py  test_pipeline.py
